--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <meta charset="utf-8">
-<title>Veilos</title>
+<title>Cloak & Pixel</title>
 
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -15,9 +15,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- FONT
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+––––––––––––––––––––––––––––––––––––––––––––––––––
 <script src="https://use.typekit.net/kxf0iwn.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
+ -->
 
 <!-- CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -25,7 +26,7 @@
 
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="icon" type="image/png" href="images/Veilos_favicon.png">
+<!-- <link rel="icon" type="image/png" href="images/Veilos_favicon.png"> -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 
