--- a/contact/index.html
+++ b/contact/index.html
@@ -6,11 +6,11 @@
 <meta name=description content="Contact page">
 <meta name=author content="Themefisher">
 <meta name=generator content="Hugo 0.92.2">
-<link rel=stylesheet href=https://github.com/cloakpixel/cloakpixel.github.io/css/wp-library.min.css media=screen>
-<link rel=stylesheet href=https://github.com/cloakpixel/cloakpixel.github.io/css/style.min.css media=screen>
-<link rel=stylesheet href=https://github.com/cloakpixel/cloakpixel.github.io/css/custom-style.min.css media=screen>
-<link rel="shortcut icon" href=https://github.com/cloakpixel/cloakpixel.github.io/images/favicon.png type=image/x-icon>
-<link rel=icon href=https://github.com/cloakpixel/cloakpixel.github.io/images/favicon.png type=image/x-icon>
+<link rel=stylesheet href=https://cloakpixel.github.io/css/wp-library.min.css media=screen>
+<link rel=stylesheet href=https://cloakpixel.github.io/css/style.min.css media=screen>
+<link rel=stylesheet href=https://cloakpixel.github.io/css/custom-style.min.css media=screen>
+<link rel="shortcut icon" href=https://cloakpixel.github.io/images/favicon.png type=image/x-icon>
+<link rel=icon href=https://cloakpixel.github.io/images/favicon.png type=image/x-icon>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css>
 <script>document.documentElement.className=document.documentElement.className.replace('no-js','js')</script>
 </head>
@@ -25,7 +25,7 @@
 </span>
 </button>
 <div class=header-titles>
-<div class="site-title faux-heading"><a href=https://github.com/cloakpixel/cloakpixel.github.io>Cloak & Pixel</a></div>
+<div class="site-title faux-heading"><a href=https://cloakpixel.github.io>Cloak & Pixel</a></div>
 </div>
 <button class="toggle nav-toggle mobile-nav-toggle" data-toggle-target=.menu-modal data-toggle-body-class=showing-menu-modal aria-expanded=false data-set-focus=.close-nav-toggle>
 <span class=toggle-inner>
@@ -37,7 +37,7 @@
 <div class=header-navigation-wrapper>
 <nav class=primary-menu-wrapper aria-label=Horizontal role=navigation>
 <ul class="primary-menu reset-list-style">
-<li class=menu-item><a href=https://github.com/cloakpixel/cloakpixel.github.io/contact/ aria-current=page>Contact</a></li>
+<li class=menu-item><a href=https://cloakpixel.github.io/contact/ aria-current=page>Contact</a></li>
 </ul>
 </nav>
 <div class="header-toggles hide-no-js">
@@ -61,7 +61,7 @@
 <div class="search-modal cover-modal header-footer-group" data-modal-target-string=.search-modal>
 <div class="search-modal-inner modal-inner">
 <div class=section-inner>
-<form role=search class=search-form action=/cloakpixel/cloakpixel.github.io/search>
+<form role=search class=search-form action=/search>
 <label for=search-form-1>
 <span class=screen-reader-text>Search for:</span>
 <input id=search-query type=search class=search-field placeholder="Search &mldr;" name=s>
@@ -83,26 +83,26 @@
 <nav class=expanded-menu aria-label=Expanded role=navigation>
 <ul class="modal-menu reset-list-style">
 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-<div class=ancestor-wrapper><a href=https://github.com/cloakpixel/cloakpixel.github.io/ aria-current=page>Home</a></div>
+<div class=ancestor-wrapper><a href=https://cloakpixel.github.io/ aria-current=page>Home</a></div>
 </li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-<div class=ancestor-wrapper><a href=https://github.com/cloakpixel/cloakpixel.github.io/about/ aria-current=page>About</a></div>
+<div class=ancestor-wrapper><a href=https://cloakpixel.github.io/about/ aria-current=page>About</a></div>
 </li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-<div class=ancestor-wrapper><a href=https://github.com/cloakpixel/cloakpixel.github.io/contact/ aria-current=page>Contact</a></div>
+<div class=ancestor-wrapper><a href=https://cloakpixel.github.io/contact/ aria-current=page>Contact</a></div>
 </li>
 </ul>
 </nav>
 <nav class=mobile-menu aria-label=Mobile role=navigation>
 <ul class="modal-menu reset-list-style">
 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-<div class=ancestor-wrapper><a href=https://github.com/cloakpixel/cloakpixel.github.io/ aria-current=page>Home</a></div>
+<div class=ancestor-wrapper><a href=https://cloakpixel.github.io/ aria-current=page>Home</a></div>
 </li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-<div class=ancestor-wrapper><a href=https://github.com/cloakpixel/cloakpixel.github.io/about/ aria-current=page>About</a></div>
+<div class=ancestor-wrapper><a href=https://cloakpixel.github.io/about/ aria-current=page>About</a></div>
 </li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-<div class=ancestor-wrapper><a href=https://github.com/cloakpixel/cloakpixel.github.io/contact/ aria-current=page>Contact</a></div>
+<div class=ancestor-wrapper><a href=https://cloakpixel.github.io/contact/ aria-current=page>Contact</a></div>
 </li>
 </ul>
 </nav>
@@ -212,11 +212,11 @@ Up <span class=arrow aria-hidden=true>&uarr;</span> </span>
 </a>
 </div>
 </footer>
-<script>var indexURL="https://github.com/cloakpixel/cloakpixel.github.io/index.json"</script>
-<script src=https://github.com/cloakpixel/cloakpixel.github.io/js/jquery.min.min.js></script>
-<script src=https://github.com/cloakpixel/cloakpixel.github.io/js/script.min.js></script>
-<script src=https://github.com/cloakpixel/cloakpixel.github.io/js/search.min.js></script>
-<script src=https://github.com/cloakpixel/cloakpixel.github.io/plugins/search.js></script>
+<script>var indexURL="https://cloakpixel.github.io/index.json"</script>
+<script src=https://cloakpixel.github.io/js/jquery.min.min.js></script>
+<script src=https://cloakpixel.github.io/js/script.min.js></script>
+<script src=https://cloakpixel.github.io/js/search.min.js></script>
+<script src=https://cloakpixel.github.io/plugins/search.js></script>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js></script>
 <div id=js-cookie-box class="cookie-box cookie-box-hide">
 This site uses cookies. By continuing to use this website, you agree to their use. <span id=js-cookie-button class=wp-block-button__link style=margin-left:10px>I Accept</span>
